--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="icon" href="opera-news-personalized-news-2019-07-23.png"/>
-    <link rel="stylesheet" href="./index.css"/>
+    <link rel="stylesheet" href="./style.css"/>
     <title>Current Affairs</title>
   </head>
   <body>
